--- a/Second/app/src/main/res/layout/linear.xml
+++ b/Second/app/src/main/res/layout/linear.xml
@@ -35,5 +35,5 @@
         android:layout_width="wrap_content"
         android:layout_height="509dp"
         android:layout_weight="2"
-        tools:srcCompat="@drawable/studying" />
+        android:src="@drawable/studying" />
 </LinearLayout>
