--- a/ThirdPrac/app/src/main/res/layout/fragment_linear.xml
+++ b/ThirdPrac/app/src/main/res/layout/fragment_linear.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LinearFragment">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -16,31 +16,37 @@
         <TextView
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
-            android:layout_height="61dp"
-            android:layout_weight="3"
-            android:text="here's linear" />
+            android:layout_height="wrap_content"
+            android:text="here's linear, already no"
+            tools:layout_editor_absoluteX="27dp"
+            tools:layout_editor_absoluteY="30dp" />
 
         <Button
             android:id="@+id/linearBackBtn"
             android:layout_width="wrap_content"
-            android:layout_height="68dp"
-            android:layout_weight="1"
-            android:text="Back to main" />
+            android:layout_height="wrap_content"
+            android:text="Back to main"
+            tools:layout_editor_absoluteX="27dp"
+            tools:layout_editor_absoluteY="76dp" />
 
         <EditText
             android:id="@+id/editTextTextPersonName2"
-            android:layout_width="match_parent"
-            android:layout_height="92dp"
-            android:layout_weight="3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="Name" />
+            android:text="Name"
+            tools:layout_editor_absoluteX="186dp"
+            tools:layout_editor_absoluteY="76dp" />
 
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="wrap_content"
-            android:layout_height="509dp"
-            android:layout_weight="2"
-            android:src="@drawable/studying" />
-    </LinearLayout>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerList"
+            android:layout_width="363dp"
+            android:layout_height="498dp"
+            android:layout_marginStart="27dp"
+            android:layout_marginTop="44dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearBackBtn" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
