--- a/ThirdPrac/app/src/main/res/layout/fragment_linear.xml
+++ b/ThirdPrac/app/src/main/res/layout/fragment_linear.xml
@@ -17,27 +17,33 @@
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="27dp"
+            android:layout_marginTop="30dp"
             android:text="here's linear, already no"
-            tools:layout_editor_absoluteX="27dp"
-            tools:layout_editor_absoluteY="30dp" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/linearBackBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="27dp"
+            android:layout_marginTop="27dp"
             android:text="Back to main"
-            tools:layout_editor_absoluteX="27dp"
-            tools:layout_editor_absoluteY="76dp" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
         <EditText
             android:id="@+id/editTextTextPersonName2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="76dp"
             android:ems="10"
             android:inputType="textPersonName"
             android:text="Name"
-            tools:layout_editor_absoluteX="186dp"
-            tools:layout_editor_absoluteY="76dp" />
+            app:layout_constraintStart_toEndOf="@+id/linearBackBtn"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerList"
