--- a/Fifth/app/src/main/res/layout/fragment_first.xml
+++ b/Fifth/app/src/main/res/layout/fragment_first.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/titleFirst"
+            android:id="@+id/first_title"
             android:layout_width="178dp"
             android:layout_height="75dp"
             android:layout_marginStart="116dp"
@@ -26,11 +26,23 @@
             android:id="@+id/firstBackBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="156dp"
-            android:layout_marginTop="88dp"
+            android:layout_marginStart="160dp"
+            android:layout_marginTop="68dp"
             android:text="Back"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/titleFirst" />
+            app:layout_constraintTop_toBottomOf="@+id/first_input" />
+
+        <EditText
+            android:id="@+id/first_input"
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
+            android:layout_marginStart="100dp"
+            android:layout_marginTop="48dp"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text="Name"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/first_title" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
