--- a/Fifth/app/src/main/res/layout/fragment_second.xml
+++ b/Fifth/app/src/main/res/layout/fragment_second.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/second_title"
             android:layout_width="211dp"
             android:layout_height="79dp"
             android:layout_marginStart="100dp"
@@ -30,7 +30,7 @@
             android:layout_marginTop="116dp"
             android:text="Back"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
+            app:layout_constraintTop_toBottomOf="@+id/second_title" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
