--- a/Fifth/app/src/main/res/layout/fragment_main.xml
+++ b/Fifth/app/src/main/res/layout/fragment_main.xml
@@ -50,4 +50,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/main_title" />
 
+    <Button
+        android:id="@+id/notificationBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="156dp"
+        android:layout_marginTop="72dp"
+        android:text="notify"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toSecondBtn" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
