--- a/Fifth/app/src/main/res/layout/fragment_first.xml
+++ b/Fifth/app/src/main/res/layout/fragment_first.xml
@@ -43,6 +43,36 @@
             android:text="Name"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/first_title" />
+
+        <Button
+            android:id="@+id/save_shared_pref"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="36dp"
+            android:layout_marginTop="64dp"
+            android:text="save shared"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/firstBackBtn" />
+
+        <Button
+            android:id="@+id/load_shared_pref"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="64dp"
+            android:layout_marginEnd="52dp"
+            android:text="load shared"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/firstBackBtn" />
+
+        <TextView
+            android:id="@+id/info_from_shared"
+            android:layout_width="197dp"
+            android:layout_height="86dp"
+            android:layout_marginStart="96dp"
+            android:layout_marginTop="16dp"
+            android:text="TextView"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/save_shared_pref" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
