--- a/Fifth/app/src/main/res/layout/fragment_main.xml
+++ b/Fifth/app/src/main/res/layout/fragment_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Main">
+    tools:context=".UIPackage.Main">
 
     <Button
         android:id="@+id/to_third_btn"
