made preparations for list to work

--- a/Fifth/app/src/main/res/layout/fragment_main.xml
+++ b/Fifth/app/src/main/res/layout/fragment_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UIPackage.Main">
+    tools:context=".views.Main">
 
     <Button
         android:id="@+id/to_third_btn"
@@ -99,5 +99,15 @@
         android:text="read from app specific"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/saveAppSpecific" />
+
+    <Button
+        android:id="@+id/toVM_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="to VM"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
