--- a/Fifth/app/src/main/res/navigation/my_nav.xml
+++ b/Fifth/app/src/main/res/navigation/my_nav.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/second"
-        android:name="com.example.fifth.views.second"
+        android:name="com.example.fifth.view.second"
         android:label="fragment_second"
         tools:layout="@layout/fragment_second" >
         <action
@@ -16,7 +16,7 @@
     </fragment>
     <fragment
         android:id="@+id/first"
-        android:name="com.example.fifth.views.first"
+        android:name="com.example.fifth.view.first"
         android:label="fragment_first"
         tools:layout="@layout/fragment_first" >
         <action
@@ -25,7 +25,7 @@
     </fragment>
     <fragment
         android:id="@+id/main"
-        android:name="com.example.fifth.views.Main"
+        android:name="com.example.fifth.view.Main"
         android:label="fragment_main"
         tools:layout="@layout/fragment_main" >
         <action
@@ -35,28 +35,76 @@
             android:id="@+id/action_main_to_second"
             app:destination="@id/second" />
         <action
-            android:id="@+id/action_main_to_trird"
-            app:destination="@id/trird" />
-        <action
             android:id="@+id/action_main_to_nickNameFirst"
             app:destination="@id/nickNameFirst" />
-    </fragment>
-    <fragment
-        android:id="@+id/trird"
-        android:name="com.example.fifth.views.Third"
-        android:label="fragment_trird"
-        tools:layout="@layout/fragment_trird" >
         <action
-            android:id="@+id/action_trird_to_main"
-            app:destination="@id/main" />
+            android:id="@+id/action_main_to_third"
+            app:destination="@id/third" />
     </fragment>
     <fragment
         android:id="@+id/nickNameFirst"
-        android:name="com.example.fifth.views.NickNameFirst"
+        android:name="com.example.fifth.view.NickNameFirst"
         android:label="fragment_nick_name_first"
         tools:layout="@layout/fragment_nick_name_first" >
         <action
             android:id="@+id/action_nickNameFirst_to_main"
+            app:destination="@id/main" />
+        <action
+            android:id="@+id/action_nickNameFirst_to_nickNameSecond"
+            app:destination="@id/nickNameSecond" />
+    </fragment>
+    <fragment
+        android:id="@+id/nickNameSecond"
+        android:name="com.example.fifth.view.NickNameSecond"
+        android:label="fragment_nick_name_second"
+        tools:layout="@layout/fragment_nick_name_second" >
+        <action
+            android:id="@+id/action_nickNameSecond_to_nickNameFirst"
+            app:destination="@id/nickNameFirst" />
+        <action
+            android:id="@+id/action_nickNameSecond_to_nickNameThird"
+            app:destination="@id/nickNameThird" />
+    </fragment>
+    <fragment
+        android:id="@+id/nickNameThird"
+        android:name="com.example.fifth.view.NickNameThird"
+        android:label="fragment_nick_name_third"
+        tools:layout="@layout/fragment_nick_name_third" >
+        <action
+            android:id="@+id/action_nickNameThird_to_nickNameSecond"
+            app:destination="@id/nickNameSecond" />
+        <action
+            android:id="@+id/action_nickNameThird_to_nickNameFourth"
+            app:destination="@id/nickNameFourth" />
+    </fragment>
+    <fragment
+        android:id="@+id/nickNameFourth"
+        android:name="com.example.fifth.view.NickNameFourth"
+        android:label="fragment_nick_name_fourth"
+        tools:layout="@layout/fragment_nick_name_fourth" >
+        <action
+            android:id="@+id/action_nickNameFourth_to_nickNameThird"
+            app:destination="@id/nickNameThird" />
+        <action
+            android:id="@+id/action_nickNameFourth_to_nickNameFifth"
+            app:destination="@id/nickNameFifth" />
+    </fragment>
+    <fragment
+        android:id="@+id/nickNameFifth"
+        android:name="com.example.fifth.view.NickNameFifth"
+        android:label="fragment_nick_name_fifth"
+        tools:layout="@layout/fragment_nick_name_fifth" >
+        <action
+            android:id="@+id/action_nickNameFifth_to_nickNameFourth"
+            app:destination="@id/nickNameFourth" />
+    </fragment>
+    <fragment
+        android:id="@+id/third"
+        android:name="com.example.fifth.view.Third"
+        android:label="fragment_trird"
+        tools:layout="@layout/fragment_trird" >
+        <action
+            android:id="@+id/action_third_to_main"
             app:destination="@id/main" />
     </fragment>
 </navigation>
