--- a/Fifth/app/src/main/res/layout/fragment_nick_name_second.xml
+++ b/Fifth/app/src/main/res/layout/fragment_nick_name_second.xml
@@ -40,6 +40,7 @@
             android:id="@+id/VM_second_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="last added" />
+            android:text="last added"
+            android:textSize="24sp" />
     </LinearLayout>
 </FrameLayout>
